# clemini

./: .gitignore  .mcp.json  .mcp.json.example  .take_break.sh  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: rust.yml
benchmark/: README.md  run.py  setup.py
benchmark/exercises/book-store/: book_store.py
benchmark/exercises/dot-dsl/: dot_dsl.py
benchmark/exercises/food-chain/: food_chain.py
benchmark/exercises/phone-number/: phone_number.py
benchmark/exercises/simple-linked-list/: simple_linked_list.py
crates/clemitui/: Cargo.toml
crates/clemitui/src/: format.rs  lib.rs  logging.rs  text_buffer.rs
crates/clemitui/tests/: acp_simulation_tests.rs  e2e_tests.rs
crates/clemitui/tests/common/: mod.rs
docs/: TEXT_RENDERING.md  TOOLS.md  TUI.md  issue-31-analysis.md
src/: acp.rs  acp_client.rs  agent.rs  diff.rs  event_bus.rs  events.rs  format.rs  lib.rs  logging.rs  main.rs  mcp.rs  plan.rs  system_prompt.md
src/tools/: ask_user.rs  background.rs  bash.rs  edit.rs  enter_plan_mode.rs  event_bus_tools.rs  exit_plan_mode.rs  glob.rs  grep.rs  kill_shell.rs  list_directory.rs  mod.rs  read.rs  task.rs  task_output.rs  tasks.rs  todo_write.rs  web_fetch.rs  web_search.rs  write.rs
src/tools/bash/: mod.rs  safety.rs
src/tui/: mod.rs  ui.rs
tests/: acp_integration_tests.rs  background_tasks_tests.rs  comprehensive_agent_tests.rs  confirmation_tests.rs  event_ordering_tests.rs  plan_mode_tests.rs  semantic_integration_tests.rs  terminal_tests.rs  tool_output_tests.rs
tests/common/: mod.rs
themes/: LICENSE
