[package]
name = "clemini"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A Gemini-powered coding CLI, built with genai-rs"
license = "MIT"

[dependencies]
# AI
genai-rs = "0.7.2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = { version = "0.7", features = ["crossterm"] }
ansi-to-tui = "7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
reqwest = { version = "0.12", features = ["json"] }
html2md = "0.2"
url = "2.5"
toml = "0.8"
regex = "1"
strsim = "0.11"
glob = "0.3"
termimad = "0.30"
home = "0.5"
colored = "2"
axum = "0.8"
async-stream = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
chrono = "0.4"
ctrlc = "3.4"
grep = "0.3"
ignore = "0.4"
globset = "0.4"
tracing = "0.1"
dirs = "5.0"
similar = "2"

[dev-dependencies]
tempfile = "3.10"
mockito = "1.2"
serial_test = "3.1"
