[workspace]
members = [".", "crates/clemitui"]
resolver = "3"

[package]
name = "clemini"
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
description = "A Gemini-powered coding CLI, built with genai-rs"
license = "MIT"

[dependencies]
# Internal crates
clemitui = { path = "crates/clemitui" }
# AI
genai-rs = "0.7.2"

# ACP (Agent Client Protocol)
agent-client-protocol = "0.9"
agent-client-protocol-schema = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
reqwest = { version = "0.12", features = ["json"] }
html2md = "0.2"
url = "2.5"
toml = "0.8"
regex = "1"
strsim = "0.11"
rand = "0.8"
glob = "0.3"
termimad = "0.30"
home = "0.5"
colored = "2"
chrono = "0.4"
ctrlc = "3.4"
grep = "0.3"
ignore = "0.4"
globset = "0.4"
tracing = "0.1"
dirs = "5.0"
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
rusqlite = { version = "0.32", features = ["bundled"] }
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }
reedline = "0.37"

[dev-dependencies]
tempfile = "3.10"
mockito = "1.2"
serial_test = "3.1"
expectrl = "0.7"
