[package]
name = "clemitui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Terminal UI for ACP-compatible AI agents"
license = "MIT"
repository = "https://github.com/evansenter/clemini"
keywords = ["cli", "tui", "ai", "llm", "acp"]
categories = ["command-line-interface", "text-processing"]

[dependencies]
# ACP (Agent Client Protocol)
agent-client-protocol = "0.9"

# Terminal formatting
colored = "2"
termimad = "0.30"

# Async runtime
tokio = { version = "1", features = ["sync", "process", "io-util"] }

# Serialization (for tool args formatting)
serde_json = "1"

# Tracing
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
